# wind.rs

./: .gitignore  AGENTS.md  Cargo.toml
admin-ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
admin-ui/src/: App.tsx  styles.css
admin-ui/src/components/: PageHeader.tsx  SecretInput.tsx  StateBlock.tsx  StatusBadge.tsx  Toast.tsx
admin-ui/src/lib/: api.ts  display.ts
admin-ui/src/pages/: AccountTestPage.tsx  AccountsPage.tsx  BansPage.tsx  ClientApiKeysPage.tsx  DashboardPage.tsx  LoginJobsPage.tsx  LoginPage.tsx  ModelsPage.tsx  ProxiesPage.tsx  RequestsPage.tsx  SettingsPage.tsx  SetupPage.tsx  StatsPage.tsx
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/engine/: ls.rs  mod.rs  proto.rs
docs/: cpa-sub2api-rust-backend-research.html  rust-react-rewrite-context.html  window-handoff-2026-05-21.html  zephyrsail-vs-ls-engine-frontend-guide.html
migrations/: 0001_init.sql
