[package]
name = "windsurf-rs-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
http = "1"
hex = "0.4"
futures-core = "0.3"
futures-util = "0.3"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls", "socks", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
